--- a/index.html
+++ b/index.html
@@ -292,7 +292,13 @@ font-size: 1rem;
 
 <p>
 
-Andy Hendrickson is ... words
+I currently serve as the Chief Technical Officer for the Enforcement Bureau at the Federal Communications Commission (FCC), where I provide strategic and technical leadership to support the agency’s mission of protecting the public interest. My focus areas include artificial intelligence, robocall and robotext mitigation, privacy, data protection, cybersecurity, spectrum enforcement, fraud prevention, and enforcement related to wireless and wireline network outages, 911 systems, public safety, critical infrastructure, homeland security, and national security.
+
+Prior to joining the FCC, I spent over 20 years in the telecommunications industry as a technology executive. During my tenure at Verizon, I played a key role in the rollout of the 5G network and helped lead the engineering and operations of the Verizon Cloud Platform (VCP). I’ve managed and contributed to complex initiatives in software-defined networking (SDN), cloud computing, cybersecurity, data analytics, and geographic information systems (GIS).
+
+Beyond my professional work, I’m an active member of the Open Infrastructure Foundation and the Network Time Foundation, and serve on the Board of the Rutgers School of Communication & Information Alumni Association. I’m also a lifelong learner—especially from my two children—and enjoy playing guitar in my free time.
+
+I hold dual degrees from Rutgers University, having studied at both the School of Environmental and Biological Sciences and the School of Communication and Information.
 
 </p>
 
