--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ font-size: 1rem;
 
 <p>
   
-  Beyond my professional work, I’m an active member of the Open Infrastructure Foundation and the Network Time Foundation, and serve on the Board of the Rutgers School of Communication & Information Alumni Association. I’m also a lifelong learner—especially from my two children—and enjoy playing guitar in my free time.
+  Beyond my professional work, I am an active member of the Open Infrastructure Foundation and the Network Time Foundation, and serve on the Board of the Rutgers School of Communication & Information Alumni Association. I’m also a lifelong learner—especially from my two children—and enjoy playing guitar in my free time.
 
 <p>
   
