--- a/index.html
+++ b/index.html
@@ -151,19 +151,23 @@
   <div class="container">
     <h1>Andy Hendrickson</h1>
     <div class="content">
-      <p>I currently serve as the Chief Technical Officer for the Enforcement Bureau at the Federal Communications Commission (FCC), where I provide strategic and technical leadership to support the agency’s mission of protecting the public interest...</p>
+      <p>I currently serve as the Chief Technical Officer for the Enforcement Bureau at the Federal Communications Commission (FCC), where I provide strategic and technical leadership to support the agency’s mission of protecting the public interest. My focus areas include the space economy, artificial intelligence, robocall and robotext mitigation, privacy, data protection, cybersecurity, spectrum enforcement, fraud prevention, and enforcement related to wireless and wireline network outages, 911 systems, public safety, critical infrastructure, homeland security, and national security.</p>
 
-      <p>Prior to joining the FCC, I spent over 20 years in the telecommunications industry...</p>
+      <p>Prior to joining the FCC, I spent over 20 years in the telecommunications industry as a technology executive. During my tenure at Verizon, I played a key role in the rollout of the 5G network and helped lead the engineering and operations of the Verizon Cloud Platform (VCP). I’ve managed and contributed to complex initiatives in software-defined networking (SDN), cloud computing, cybersecurity, data analytics, and geographic information systems (GIS).</p>
 
-      <p>Beyond my professional work, I am an active member of the Open Infrastructure Foundation and the Network Time Foundation...</p>
+      <p>Beyond my professional work, I am an active member of the Open Infrastructure Foundation and the Network Time Foundation, and serve on the Board of the Rutgers School of Communication & Information Alumni Association. I’m also a lifelong learner—especially from my two children—and enjoy playing guitar in my free time.</p>
 
-      <p>I hold dual degrees from Rutgers University...</p>
+      <p>I hold dual degrees from Rutgers University, having studied at both the School of Environmental and Biological Sciences and the School of Communication and Information.</p>
 
+
+       <h2>Past Appearances</h2>
+      <ul>
+        <li><strong>April 28, 2025</strong> – Guest Lecture, Artificial Intelligence in the Telecommunications Industry <em>,College of Engineering - Virginia Commonwealth University</em>, Richmond, VA</li>
+      </ul>
+      
       <h2>Upcoming Appearances</h2>
       <ul>
-        <li><strong>June 12, 2025</strong> – Panelist, <em>AI & National Security Forum</em>, Washington, DC</li>
-        <li><strong>September 5, 2025</strong> – Guest Lecture, <em>Rutgers School of Communication & Information</em>, New Brunswick, NJ</li>
-        <li><strong>October 22, 2025</strong> – Keynote Speaker, <em>Spectrum & Infrastructure Symposium</em>, San Jose, CA</li>
+        <li><strong>August 7-10, 2025</strong> – Speaker <em>The RF Garden at DEF CON</em>, Las Vegas, NV</li>
       </ul>
 
       <div class="social">
