--- a/index.html
+++ b/index.html
@@ -162,13 +162,16 @@
 
        <h2>Past Appearances</h2>
       <ul>
-        <li><strong>April 28, 2025</strong> – Guest Lecture, Artificial Intelligence in the Telecommunications Industry <em>,College of Engineering - Virginia Commonwealth University</em>, Richmond, VA</li>
+        <li><strong>April 28, 2025</strong> – Guest Lecture, Artificial Intelligence in the Telecommunications Industry. <em>College of Engineering - Virginia Commonwealth University,</em> Richmond, VA</li>
       </ul>
       
       <h2>Upcoming Appearances</h2>
       <ul>
-        <li><strong>August 7-10, 2025</strong> – Speaker <em>The RF Garden at DEF CON</em>, Las Vegas, NV</li>
+        <li><strong>August 7-10, 2025</strong> – Speaker, Default-to-Safe with AI <em>The RF Garden at DEF CON.</em>Las Vegas, NV</li>
       </ul>
+      <ul>
+        <li><strong>November 10-13, 2025</strong> – TBA <em>Kubecon-CloudNativeCon North America 2025</em>Georgia World Congress Center, Atlanta, GA</li>
+      </ul>      
 
       <div class="social">
         <a href="https://www.linkedin.com/in/andrewhendrickson/" aria-label="LinkedIn">
