--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
       
       <h2>Upcoming Appearances</h2>
       <ul>
-        <li><strong>August 7-10, 2025</strong> – Speaker, Default-to-Safe with AI <em>The RF Garden at DEF CON.</em>Las Vegas, NV</li>
+        <li><strong>August 7-10, 2025</strong> – Speaker, Default-to-Safe with AI, <em>The RF Garden at DEF CON.</em>Las Vegas, NV</li>
       </ul>
       <ul>
-        <li><strong>November 10-13, 2025</strong> – TBA <em>Kubecon-CloudNativeCon North America 2025</em>Georgia World Congress Center, Atlanta, GA</li>
+        <li><strong>November 10-13, 2025</strong> – TBA, <em>Kubecon-CloudNativeCon - North America 2025.</em>Georgia World Congress Center, Atlanta, GA</li>
       </ul>      
 
       <div class="social">
