--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 2rem;
-      color: #2563eb;
+      color: #5d87a1;
       text-align: center;
     }
 
