--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Andy Hendrickson</title>
+<link rel="icon" href="favicon.png" type="image/png">
   <style>
     * {
       margin: 0;
@@ -56,7 +57,7 @@
       font-size: 1.5rem;
       margin-top: 2rem;
       margin-bottom: 1rem;
-      color: #1e40af;
+      color: #5d87a1;
       border-bottom: 2px solid #e2e8f0;
       padding-bottom: 0.5rem;
     }
