--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <body>
   <div class="container">
 
-    <img src="logo.png" alt="Andy Hendrickson" style="width: 120px; border-radius: 50%; display: block; margin: 0 auto 1rem;">
+    <img src="favicon.png" alt="Andy Hendrickson" style="width: 120px; border-radius: 50%; display: block; margin: 0 auto 1rem;">
    
     <h1>#whois ~ Andy Hendrickson</h1>
     <div class="content">
