--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
   <div class="container">
 
     <img src="favicon.png" alt="Andy Hendrickson" style="width: 120px; border-radius: 50%; display: block; margin: 0 auto 1rem;">
-   
-    <h1>#whois ~ Andy Hendrickson</h1>
+    <h1>#whois ~ </h1>
+    <h1> Andy Hendrickson</h1>
     <div class="content">
       <p>I currently serve as the Chief Technical Officer for the Enforcement Bureau at the Federal Communications Commission (FCC), where I provide strategic and technical leadership to support the agency’s mission of protecting the public interest. Focus areas include networks, the space economy, artificial intelligence, robocall and robotext mitigation, privacy, data protection, cybersecurity, spectrum enforcement, fraud prevention, mediation, and enforcement related to wireless and wireline network outages, 911 systems, public safety, critical infrastructure, homeland security, and national security.</p>
 
