--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
       <p>Prior to joining the FCC, I spent over 20 years in the telecommunications industry as a technology executive. During my tenure at Verizon, I played a key role in the rollout of the 5G network and helped lead the engineering and operations of the Verizon Cloud Platform (VCP). I have managed and contributed to complex initiatives in software-defined networking (SDN), virtualization and cloud computing, cybersecurity, data analytics, and geographic information systems (GIS).</p>
 
-      <p>Personally, I am invested in open technology.  I am involved with the Open Infrastructure Foundation and the Network Time Foundation. I also participate on the Board of the Rutgers School of Communication & Information Alumni Association. My most significant growth always seems to come from the lessons of my two children. In my downtime, I'm either deep in the world of audio recording and engineering or rocking out on various instruments.</p>
+      <p>Personally, I am invested in open technology.  I am involved with the Linux Foundation, Open Infrastructure Foundation, and the Network Time Foundation. I also participate on the Board of the Rutgers School of Communication & Information Alumni Association. My most significant growth always seems to come from the lessons of my two children. In my downtime, I'm either deep in the world of audio recording and engineering or rocking out on various instruments.</p>
 
       <p>I hold dual degrees from Rutgers University, having studied at both the School of Environmental and Biological Sciences and the School of Communication and Information.</p>
 
