--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
       <p>I hold dual degrees from Rutgers University, having studied at both the School of Environmental and Biological Sciences and the School of Communication and Information.</p>
 
- <h2>Upcoming Appearances</h2>
+ <h2>Public Appearances</h2>
       <ul>
         <li><strong>August 7-10, 2025</strong> – Speaker, Default-to-Safe with AI, <em>The RF Garden at DEF CON.</em> Las Vegas, NV</li>
       </ul>
