--- a/index.html
+++ b/index.html
@@ -149,6 +149,30 @@
   </style>
 </head>
 
+
+  <h2 class="typewriter">Web Enthusiast • Code Whisperer • Lifelong Learner</h2>
+
+<style>
+.typewriter {
+  font-family: monospace;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.15em solid orange;
+  width: 0;
+  animation: typing 3s steps(40, end) forwards, blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+</style>
+
 <body>
   <div class="container">
 
