--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </style>
 </head>
 
-<h1 class="typewriter">#...... #...... #..... donate to # opensource projects # that matter # to you #....</h1>
+<h1 class="typewriter">#...... #...... donate to # opensource projects # that matter # to you #....</h1>
 
 <style>
 .typewriter {
