--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
 
 <h3 class="typewriter">#...... #...... donate to # opensource projects # that matter # to you #....</h3>
 
+<h3 class="typewriter">#.... donate to opensource projects that matter # to you #.... ....#</h3>
+
 <style>
 .typewriter {
   font-family: monospace;
@@ -158,6 +160,8 @@
   white-space: nowrap;
   border-right: 0.15em solid orange;
   width: 0;
+  margin: 0 auto;
+  text-align: center;
   animation: typing 3s steps(40, end) forwards, blink-caret 0.75s step-end infinite;
 }
 
