--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
   </style>
 </head>
 
-<h3 class="typewriter">#...... #...... donate to # opensource projects # that matter # to you #....</h3>
-
-<h3 class="typewriter">#.... donate to opensource projects that matter # to you #.... ....#</h3>
+<h3 class="typewriter">#... _donate to opensource projects that matter to you_ #...</h3>
 
 <style>
 .typewriter {
