--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
   </style>
 </head>
 
-<h3 class="typewriter">... _donate to opensource_ #...</h3>
-  <h3 class="typewriter">... _donate to opensource projects_ #...</h3>
-  <h3 class="typewriter">... _donate to opensource projects that matter to you_ #...</h3>
+<h3 class="typewriter">_donate to opensource_ ...</h3>
+  <h3 class="typewriter">_donate to opensource projects_ ...</h3>
+  <h3 class="typewriter">_donate to opensource projects that matter to you_ ...</h3>
 
 <style>
 .typewriter {
