--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 <h3 class="typewriter">donate to opensource...</h3>
   <h3 class="typewriter">donate to opensource projects...</h3>
-  <h3 class="typewriter">donate to opensource projects that matter to you</h3>
+  <h3 class="typewriter">donate to opensource projects that matter to you.</h3>
 
 <style>
 .typewriter {
