--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
   </style>
 </head>
 
+<h3 id="animated-text" class="typewriter">
 
 <h3 class="typewriter">donate to open source...</h3>
   <h3 class="typewriter">donate to open source projects...</h3>
@@ -172,30 +173,39 @@
   to { width: 100% }
 }
 
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+</style>
 
 <script>
   const text = document.getElementById('animated-text');
 
-  // Initial fade out after 30 seconds
-  setTimeout(() => {
-    text.style.opacity = '0';
-  }, 30000);
-
-  // Loop: fade in and fade out every 60 seconds
-  setInterval(() => {
-    text.style.opacity = '1';
-
-    // Optional: retrigger typewriter animation by resetting width
+  function startTypingAnimation() {
+    // Reset animation
     text.style.width = '0';
     text.style.animation = 'none';
-    void text.offsetWidth; // Trigger reflow to restart animation
+    void text.offsetWidth; // force reflow
     text.style.animation = 'typing 3s steps(40, end) forwards, blink-caret 0.75s step-end infinite';
+  }
 
-    // Fade out again after 30s
+  function cycleText() {
+    // Fade in
+    text.style.opacity = '1';
+    startTypingAnimation();
+
+    // Fade out after 30s
     setTimeout(() => {
       text.style.opacity = '0';
     }, 30000);
-  }, 60000);
+  }
+
+  // Initial cycle
+  cycleText();
+
+  // Repeat every 60s
+  setInterval(cycleText, 60000);
 </script>
 
 <body>
