--- a/index.html
+++ b/index.html
@@ -149,11 +149,7 @@
   </style>
 </head>
 
-<h3 id="animated-text" class="typewriter">
-
-<h3 class="typewriter">donate to open source...</h3>
-  <h3 class="typewriter">donate to open source projects...</h3>
-  <h3 class="typewriter">donate to open source projects that matter to you.</h3>
+<h3 id="animated-text" class="typewriter"> donate to open source projects that matter to you.</h3>
 
 <style>
 .typewriter {
