--- a/index.html
+++ b/index.html
@@ -204,6 +204,28 @@
   setInterval(cycleText, 60000);
 </script>
 
+ //crssa style snippet
+  
+  <style>
+  .link-button {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #003366;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+
+  .link-button:hover {
+    background-color: #0055a5;
+    transform: scale(1.05);
+  }
+</style>
+
+
 <body>
   <div class="container">
 
@@ -252,6 +274,15 @@
       </div>
     </div>
   </div>
+
+//insert crssa button
+
+<div style="text-align:center; margin-top: 20px;">
+  <a href="https://crssa.rutgers.edu/" target="_blank" class="link-button">
+    🌍 Explore CRSSA at Rutgers
+  </a>
+</div>
+
   
 <ul></ul>
 <ul> Copyright default-to-safe.org 2025. All rights reserved.</ul>
