--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
   // Repeat every 60s
   setInterval(cycleText, 60000);
 </script>
-
- //crssa style snippet
+  
+<!-- Button Style to visit CRSSA site -->
   
   <style>
   .link-button {
@@ -275,18 +275,21 @@
     </div>
   </div>
 
-//insert crssa button
-
+  <!-- Button to visit CRSSA site -->
+  
 <div style="text-align:center; margin-top: 20px;">
   <a href="https://crssa.rutgers.edu/" target="_blank" class="link-button">
     🌍 Explore CRSSA at Rutgers
   </a>
 </div>
 
-  
-<ul></ul>
-<ul> Copyright default-to-safe.org 2025. All rights reserved.</ul>
- <ul></ul>
+<div style="text-align: center; font-family: 'Courier New', Courier, monospace; margin-top: 20px;">
+  <ul style="list-style: none; padding: 0; margin: 0;">
+    <li>Copyright default-to-safe.org 2025. All rights reserved.</li>
+  </ul>
+</div>
+
+<!-- Cheers if you are borrowing some of this code -->
   
 </body>
 </html>
