--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     padding: 12px 24px;
     font-size: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #003366;
+    background-color: #5d87a1;
     color: #ffffff;
     text-decoration: none;
     border-radius: 8px;
