--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         font-size: 14px;
       " onmouseover="this.style.transform='translateX(5px)'" onmouseout="this.style.transform='translateX(0)'">
         <span style="margin-right: 12px;">📧</span>
-        <span id="email-button-text">Copy Email Address</span>
+        <span id="email-button-text">Copy Andy's Email Address</span>
       </button>
       
       <a href="https://crssa.rutgers.edu/" target="_blank" style="
@@ -364,7 +364,7 @@
         transition: transform 0.2s ease;
       " onmouseover="this.style.transform='translateX(5px)'" onmouseout="this.style.transform='translateX(0)'">
         <span style="margin-right: 12px;">🌍</span>
-        <span>Visit CRSSA</span>
+        <span>Rutgers Center for Remote Sensing and Spatial Analysis</span>
       </a>
     </div>
     
