--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <li><strong>April 28, 2025</strong> – Guest Lecture, Artificial Intelligence in the Telecommunications Industry. <em>College of Engineering - Virginia Commonwealth University,</em> Richmond, VA</li>
       </ul>
 
-      <div class="social">
+  <!--    <div class="social">
         <a href="https://www.linkedin.com/in/andrewhendrickson/" aria-label="LinkedIn">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 
@@ -234,7 +234,7 @@
               7-2.777 7 2.476v6.759z"/>
           </svg>
         </a>
-      </div>
+      </div> -->
 
       <!-- Quick Connect Button -->
       <div style="text-align: center; margin-top: 20px;">
