--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       </div>
     </div>
 
-    <!-- CRSSA Button -->
+    <!-- CRSSA Button 
     <div style="text-align:center; margin-top: 20px;">
       <a href="https://crssa.rutgers.edu/" target="_blank" style="
         display: inline-block;
@@ -277,7 +277,7 @@
       " onmouseover="this.style.backgroundColor='#0055a5'; this.style.transform='scale(1.05)'" onmouseout="this.style.backgroundColor='#5d87a1'; this.style.transform='scale(1)'">
         🌍 Explore CRSSA at Rutgers
       </a>
-    </div>
+    </div> -->
 
     <!-- Copyright -->
     <div style="text-align: center; font-family: 'Courier New', Courier, monospace; margin-top: 20px;">
